[package]
name = "net-proxy-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-prost = "0.2.1"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "io-std",
    "io-util",
    "rt",
    "rt-multi-thread", # so examples can use #[tokio::main]
    "sync",
    "time",
    "test-util",
    "signal",
] }
bytes = "1.1.0"
tokio-test = "0.4"
tokio-util = { version = "0.6", features = ["codec"] }
thiserror = "1.0.30"
anyhow = "1.0.45"
log = "0.4.0"
log4rs = "1.0.0"